# compute-at-edge-experiment

./: README.md
assemblyscript/: fastly.toml
rust/: Cargo.toml  config.yaml  fastly.toml
rust/src/: acl.rs  cdn_config.rs  cdn_rules.rs  cdn_secrets.rs  main.rs  secrets.rs
rust/src/cdn_rules/: ab_tests.rs  accounts.rs  backends.rs  mod.rs
static/: index.html  style.css
static/mirror1/: index.html
static/mirror2/: index.html
static/mirror3/: index.html
